// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TerminalStreamWritable writes a debug message: output 1`] = `
Object {
  "debug": "test message",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`TerminalStreamWritable writes a debug message: output as chunks 1`] = `
Array [
  Object {
    "severity": "debug",
    "text": "test message",
  },
]
`;

exports[`TerminalStreamWritable writes a message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "test message",
  "verbose": "",
  "warning": "",
}
`;

exports[`TerminalStreamWritable writes a message: output as chunks 1`] = `
Array [
  Object {
    "severity": "log",
    "text": "test message",
  },
]
`;

exports[`TerminalStreamWritable writes a verbose message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "test message",
  "warning": "",
}
`;

exports[`TerminalStreamWritable writes a verbose message: output as chunks 1`] = `
Array [
  Object {
    "severity": "verbose",
    "text": "test message",
  },
]
`;

exports[`TerminalStreamWritable writes a warning message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]test message[default]",
}
`;

exports[`TerminalStreamWritable writes a warning message: output as chunks 1`] = `
Array [
  Object {
    "severity": "warning",
    "text": "[yellow]test message[default]",
  },
]
`;

exports[`TerminalStreamWritable writes an error message: output 1`] = `
Object {
  "debug": "",
  "error": "[red]test message[default]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`TerminalStreamWritable writes an error message: output as chunks 1`] = `
Array [
  Object {
    "severity": "error",
    "text": "[red]test message[default]",
  },
]
`;
